--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 	"license": "MIT",
 	"dependencies": {
 		"@types/express": "^4.16.1",
+		"@types/express-graphql": "^0.6.2",
+		"@types/graphql": "^14.0.7",
+		"@types/node": "^11.9.4",
 		"concurrently": "^4.1.0",
 		"express": "^4.16.4",
-		"nodemon": "^1.18.9",
-		"typescript": "^3.3.1",
-		"@types/express-graphql": "^0.6.2",
-		"@types/node": "^11.9.4",
 		"express-graphql": "^0.7.1",
-		"graphql": "^14.1.1"
+		"graphql": "^14.1.1",
+		"nodemon": "^1.18.9",
+		"typescript": "^3.3.1"
 	},
 	"devDependencies": {
 		"tslint": "^5.12.1"
