--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"express": "^4.16.4",
 		"express-graphql": "^0.7.1",
+		"graphiql": "^0.12.0",
 		"graphql": "^14.1.1",
 		"nodemon": "^1.18.10"
 	}
