--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start-dev": "nodemon app.js",
+		"dev": "nodemon app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"dotenv": "^6.2.0",
 		"express": "^4.16.4",
 		"express-graphql": "^0.7.1",
 		"graphiql": "^0.12.0",
 		"graphql": "^14.1.1",
+		"mongoose": "^5.4.16",
 		"nodemon": "^1.18.10"
 	}
 }
